--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
   --header: #2c2d33;
   --background: #eee;
   --letters: #d9d9d9;
+
   --no-read: #b66464;
   --read: #92b664;
 }
@@ -115,20 +116,27 @@ body {
   font-weight: bold;
 }
 
-.author-name {
-  cursor: pointer;
-}
-
-.author-name:hover {
-  color: var(--line);
-  text-decoration: underline;
-}
-
+/* book footer */
 .book-options {
-  align-self: flex-end;
+  width: 100%;
+  position: relative;
 
   display: flex;
+  justify-content: flex-end;
   align-items: center;
+}
+
+.read-check {
+  -ms-transform: scale(2); /* IE */
+  -moz-transform: scale(2); /* FF */
+  -webkit-transform: scale(2); /* Safari and Chrome */
+  -o-transform: scale(2); /* Opera */
+  transform: scale(2);
+  padding: 10px;
+  margin: 10px;
+
+  accent-color: var(--read);
+  cursor: pointer;
 }
 
 .open-menu-button {
@@ -164,18 +172,4 @@ body {
 
 .hide {
   display: none;
-}
-
-input[type="checkbox"] {
-  /* Double-sized Checkboxes */
-  -ms-transform: scale(2); /* IE */
-  -moz-transform: scale(2); /* FF */
-  -webkit-transform: scale(2); /* Safari and Chrome */
-  -o-transform: scale(2); /* Opera */
-  transform: scale(2);
-  padding: 10px;
-  margin: 10px;
-
-  accent-color: var(--read);
-  cursor: pointer;
 }
