--- a/styles/style.css
+++ b/styles/style.css
@@ -234,7 +234,13 @@ body {
   font-weight: bold;
 }
 
-.input-container > input {
+.input-container > div {
+  display: flex;
+  gap: 5px;
+}
+
+.input-container input {
+  flex: 0.8;
   padding: 8px 15px;
 
   background-color: var(--header);
@@ -245,6 +251,16 @@ body {
 
   border-radius: 20px;
   box-shadow: 1px 1px 1px var(--letters);
+}
+
+.input-container i {
+  font-size: xx-large;
+  padding: 10px;
+  color: var(--read);
+}
+
+.input-container .fa-xmark {
+  color: var(--no-read);
 }
 
 /* buttons */
